# mockboxd

./: .gitignore  .pylintrc  README.md  app.py  pyproject.toml  schema.sql
src/: app.py  database.py
src/website/: __init__.py  externals.py  views.py
src/website/forms/: add_movie_form.py  comment_form.py  follow_form.py  login_form.py  rating_form.py  search_movie_form.py  search_user_form.py  signup_form.py  unfollow_form.py
src/website/models/: comment.py  follower.py  movie.py  rating.py  user.py  users.py  watchlist.py
src/website/static/: styles.css
src/website/templates/: admin_panel.html  base.html  index.html  login.html  movie_info.html  movies.html  profile.html  signup.html  users.html
src/website/templates/admin/: add_movie.html  admin_panel.html  delete_movie.html  delete_users.html  search_movie.html  search_users.html
