[tool.poetry]
name = "mockboxd"
version = "0.1.0"
description = ""
authors = ["tuome <tonni@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
flask-bcrypt = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
